# claw-vault-app

./: .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  input.css  package.json
assets/: tailwind.css
src/: main.rs  ticks.rs  utils.rs
src/api/: mod.rs
src/components/: decrypt_block.rs  decrypt_dialog.rs  echo.rs  encrypt_block.rs  encrypt_dialog.rs  footer.rs  mod.rs  navbar.rs  square_pattern.rs
src/lib/: utils.ts
src/lib/components/: VaultDialog.svelte
src/views/: blog.rs  home.rs  mod.rs  not_found.rs  privacy.rs  vault.rs
